<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_biography"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_biography" />
        <item
            android:id="@+id/nav_dates"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/menu_dates" />
        <item
            android:id="@+id/nav_photos"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_photos" />
        <item
            android:id="@+id/nav_videos"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_videos" />

        <item
            android:id="@+id/nav_books"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_books" />
    </group>
</menu>